@@ -1,3 +1,7 @@
+2017-07-06  Robby Stephenson  <robby@periapsis.org>
+
+	* Add DBUS option for filtering exported entries (Bug 382035).
+
 2017-07-02  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug of running out of memory when writing very large XML files (Bug 380832).
